--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -39,8 +39,11 @@
 .section a:hover {
     text-decoration: underline;
 }
+.social img {
+    width: 50px;
+}
 .social {
-    margin-left: 30%;
+    margin-left: 15%;
     display: flex;
     align-items: center;
 }
@@ -65,7 +68,6 @@
         margin-top: 130px;
     }
     .social a {
-        margin-right: 60px;
         transform: scale(1.9);
     }
     .social a + a {
@@ -123,6 +125,16 @@
     .logoBlock {
         width: 150px;
     }
+    .social {
+        display: flex;
+        justify-content: space-around;
+    }
+    .social a {
+        margin: 0;
+    }
+    .social a + a {
+        margin: 0;
+    }
 }
 
 @media screen and (max-width: 414px) {
@@ -133,14 +145,17 @@
     .section a {
         font-size: 22px;
     }
-    .social a {
-        transform: scale(.8);
-    }
+
     .social {
         margin-top: 50px;
     }
+
+    .social a {
+        transform: scale(.7);
+    }
+
     .main {
-        padding-bottom: 50px;
+        padding-bottom: 100px;
     }
 }
 
@@ -157,15 +172,5 @@
     }
     .social {
         margin-top: 30px;
-    }
-    .social a {
-        margin-right: 30px;
-    }
-    .social a + a {
-        margin-left: 30px;
-        margin-right: 0;
-    }
-    .main {
-        padding-bottom: 30px;
     }
 }
