--- a/src/Components/ThankyouModal/Thankyou.module.css
+++ b/src/Components/ThankyouModal/Thankyou.module.css
@@ -31,3 +31,15 @@
     align-items: center;
     margin-bottom: 10px;
 }
+
+@media screen and (max-width: 768px) {
+    .window {
+        width: 60%;
+    }
+}
+
+@media screen and (max-width: 468px) {
+    .window {
+        width: 85%;
+    }
+}
